WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210709
Fix CLoop build for iterator opcodes
https://bugs.webkit.org/show_bug.cgi?id=210709
Summary
Fix CLoop build for iterator opcodes
Keith Miller
Reported
2020-04-18 19:05:37 PDT
Fix CLoop build for iterator opcodes
Attachments
Patch
(7.44 KB, patch)
2020-04-18 19:07 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.88 KB, patch)
2020-04-18 19:22 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.60 KB, patch)
2020-04-18 19:42 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2020-04-18 19:07:07 PDT
Created
attachment 396884
[details]
Patch
Robin Morisset
Comment 2
2020-04-18 19:08:44 PDT
Comment on
attachment 396884
[details]
Patch r=me
Robin Morisset
Comment 3
2020-04-18 19:12:19 PDT
Comment on
attachment 396884
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=396884&action=review
> Source/JavaScriptCore/bytecode/BytecodeList.rb:1326 > +op :llint_cloop_did_return_from_js_46
I was too fast in r+-ing this patch, I think it is missing matching code in Bytecodes.h. Look for macro(llint_cloop_did_return_from_js_1, 1), and add similar ones for the new ops you are adding.
Keith Miller
Comment 4
2020-04-18 19:13:23 PDT
(In reply to Robin Morisset from
comment #3
)
> Comment on
attachment 396884
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=396884&action=review
> > > Source/JavaScriptCore/bytecode/BytecodeList.rb:1326 > > +op :llint_cloop_did_return_from_js_46 > > I was too fast in r+-ing this patch, I think it is missing matching code in > Bytecodes.h. Look for macro(llint_cloop_did_return_from_js_1, 1), and add > similar ones for the new ops you are adding.
Isn't Bytecodes.h auto generated?
Keith Miller
Comment 5
2020-04-18 19:13:47 PDT
Looks like I need to generate superfluous labels for 32-bit...
Keith Miller
Comment 6
2020-04-18 19:22:07 PDT
Created
attachment 396885
[details]
Patch for landing
Keith Miller
Comment 7
2020-04-18 19:42:11 PDT
Created
attachment 396888
[details]
Patch for landing
EWS
Comment 8
2020-04-18 20:43:52 PDT
Committed
r260333
: <
https://trac.webkit.org/changeset/260333
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396888
[details]
.
Radar WebKit Bug Importer
Comment 9
2020-04-18 20:44:15 PDT
<
rdar://problem/61995365
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug