Fix CLoop build for iterator opcodes https://bugs.webkit.org/show_bug.cgi?id=210709

Reviewed by Robin Morisset.

We need to add a default paramater for the metadata pointer
in the CLoop build. Additionally, the helper declarations need
to be in the various slow path header files. Lastly we need
opcode labels for our new JS call return points.

* bytecode/BytecodeList.rb:
* llint/LLIntSlowPaths.cpp:
* llint/LLIntSlowPaths.h:
* runtime/CommonSlowPaths.h:


Canonical link: https://commits.webkit.org/223593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260333 268f45cc-cd09-0410-ab3c-d52691b4dbfc